@@ -218,6 +218,9 @@ BUGFIXES:
   ZOOKEEPER-1376. zkServer.sh does not correctly check for
   $SERVER_JVMFLAGS (Skye W-M via henryr)
 
+  ZOOKEEPER-1909. removeWatches doesn't return NOWATCHER when there is
+  no watch set (Raul Gutierrez Segales via rakeshr)
+
   ZOOKEEPER-1550. ZooKeeperSaslClient does not finish anonymous login on
   OpenJDK. (Eugene Koontz via mahadev)
 
